CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("Murakami")

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
SET(EXECUTABLE_NAME "murakami")

IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE Release)
ENDIF ()

FILE(GLOB_RECURSE MY_SRC "src/*.cpp")
FILE(GLOB_RECURSE MY_INC "include/*.h")

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${MY_SRC} ${MY_INC})

INCLUDE(SetCompilerFlags)

FIND_PACKAGE(OpenGL REQUIRED)

FIND_PACKAGE(SFML 2 REQUIRED system window graphics network audio)
IF (SFML_FOUND)
	INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} "${SFML_LIBRARIES}")
ENDIF ()

